--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <title>AR Wallet Panel</title>
-
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -23,8 +22,6 @@ linear-gradient(135deg,#020617,#020617);
 display:flex;align-items:center;justify-content:center;color:#e5e7eb;
 }
 
-#desktopBlock{display:none;max-width:380px;padding:28px;text-align:center;background:rgba(15,23,42,.8);border-radius:24px;border:1px solid rgba(148,163,184,.2)}
-
 #app{width:100%;height:100%;display:flex;align-items:center;justify-content:center;padding:16px}
 
 .card{
@@ -34,25 +31,73 @@ backdrop-filter:blur(22px);
 border-radius:28px;padding:24px;
 border:1px solid rgba(148,163,184,.18);
 box-shadow:0 30px 60px rgba(0,0,0,.7);
+position:relative;
 }
 
-h2{text-align:center;margin-bottom:20px;font-size:22px}
-
-input{
-width:100%;padding:16px;margin-bottom:14px;
-border-radius:18px;border:1px solid rgba(148,163,184,.2);
-background:rgba(2,6,23,.7);color:#fff;font-size:15px;
+.headerRow{
+display:flex;
+justify-content:space-between;
+align-items:center;
+margin-bottom:20px;
 }
 
-input:focus{outline:none;border-color:#38bdf8;box-shadow:0 0 0 4px rgba(56,189,248,.25)}
-
-button{
-width:100%;padding:15px;border-radius:20px;border:none;
-font-size:15px;font-weight:600;cursor:pointer;
+.profileIcon{
+width:38px;height:38px;
+border-radius:50%;
+background:linear-gradient(135deg,#38bdf8,#0ea5e9);
+display:flex;align-items:center;justify-content:center;
+cursor:pointer;
+font-weight:bold;
+color:#020617;
 }
 
-.primary{background:linear-gradient(135deg,#38bdf8,#0ea5e9);color:#020617}
-.logout{margin-top:24px;background:linear-gradient(135deg,#ef4444,#b91c1c);color:#fff}
+.profileMenu{
+position:absolute;
+top:70px;
+right:24px;
+background:#0f172a;
+border:1px solid rgba(148,163,184,.2);
+border-radius:14px;
+padding:10px;
+display:none;
+z-index:10;
+width:160px;
+}
+
+.profileMenu button{
+background:none;
+border:none;
+color:#fff;
+width:100%;
+padding:10px;
+text-align:left;
+cursor:pointer;
+border-radius:10px;
+}
+
+.profileMenu button:hover{
+background:#1e293b;
+}
+
+input,select{
+width:100%;
+padding:14px;
+border-radius:16px;
+border:1px solid rgba(148,163,184,.2);
+background:rgba(2,6,23,.7);
+color:#fff;
+font-size:14px;
+}
+
+button.primary{
+background:linear-gradient(135deg,#38bdf8,#0ea5e9);
+color:#020617;
+font-weight:600;
+border:none;
+padding:14px;
+border-radius:18px;
+cursor:pointer;
+}
 
 #list{margin-top:20px;max-height:45vh;overflow-y:auto}
 
@@ -63,85 +108,65 @@ border:1px solid rgba(148,163,184,.18);
 margin-bottom:14px;
 }
 
-.badge{display:inline-block;margin-left:6px;padding:4px 10px;font-size:11px;border-radius:999px}
-.active{color:#22c55e;border:1px solid rgba(34,197,94,.4)}
-.inactive{color:#ef4444;border:1px solid rgba(239,68,68,.4)}
-
-.actions{display:flex;gap:10px;margin-top:12px}
-.actions button{padding:10px;font-size:13px;border-radius:16px;background:#334155;color:#fff}
-.actions button:last-child{background:#ef4444}
-
 .balance{
 margin-top:6px;
 font-size:16px;
 font-weight:bold;
 color:#facc15;
+}
+
+.filters{
 display:flex;
-align-items:center;
-gap:6px;
+gap:10px;
+margin-top:1rem;
 }
 
-.balance span{
-font-size:18px;
-}
-
-.filterBox{
-margin-bottom:12px;
+.filters select,.filters input{
+flex:1;
 }
 
 .hide{display:none}
-.msg{text-align:center;margin-top:8px;color:#fb7185;font-size:13px}
 </style>
 </head>
 
 <body>
-
-<div id="desktopBlock">
-<h2>Mobile Only</h2>
-<p>Please open this app on a mobile device.</p>
-</div>
-
 <div id="app">
 
 <div class="card" id="loginBox">
-<h2>Login</h2>
-<input id="username" placeholder="Username">
-<input id="password" type="password" placeholder="Password">
+<h2 style="text-align:center;margin-bottom:20px">Login</h2>
+<input id="username" placeholder="Username"><br><br>
+<input id="password" type="password" placeholder="Password"><br><br>
 <button class="primary" onclick="login()">Login</button>
-<div class="msg" id="msg"></div>
+<div id="msg" style="margin-top:10px;color:#fb7185;text-align:center"></div>
 </div>
 
 <div class="card hide" id="dashboard">
-<h2 id="title"></h2>
 
-<input id="walletUserId" placeholder="AR Wallet User ID">
-<input id="walletUserName" placeholder="User Name">
+<div class="headerRow">
+<h2 id="title"></h2>
+<div class="profileIcon" onclick="toggleMenu()">☻</div>
+</div>
+
+<div class="profileMenu" id="profileMenu">
+<button onclick="openChangePassword()">Change Password</button>
+<button onclick="logout()">Logout</button>
+</div>
+
+<input id="walletUserId" placeholder="AR Wallet User ID"><br><br>
+<input id="walletUserName" placeholder="User Name"><br><br>
 <button class="primary" onclick="addMember()">Add Member</button>
 
-<div id="adminFilters" class="hide">
-<input id="filterCreatedBy" placeholder="Filter by Created By">
-<input id="filterSearch" placeholder="Search by Name or User ID">
+<div id="adminFilters" class="filters hide">
+<select id="filterCreatedBy"></select>
+<input id="filterSearch" placeholder="Search by Name or ID">
 </div>
 
 <div id="list"></div>
 
-<hr style="margin:20px 0;border-color:#334155">
-
-<input id="newPassword" type="password" placeholder="New Password">
-<button class="primary" onclick="changePassword()">Change Password</button>
-
-<button class="logout" onclick="logout()">Logout</button>
 </div>
-
 </div>
 
 <script>
-
-if(!(/Android|iPhone|iPad|Mobile/i.test(navigator.userAgent))){
-desktopBlock.style.display="block";
-app.style.display="none";
-}
-
 firebase.initializeApp({
 apiKey:"AIzaSyCI7WjTsCfYrFU0U38y84PvSE1ysoOmc68",
 projectId:"wallet-automation-a59da"
@@ -152,9 +177,6 @@ async function hashPassword(p){
 const b=await crypto.subtle.digest("SHA-256",new TextEncoder().encode(p));
 return [...new Uint8Array(b)].map(x=>x.toString(16).padStart(2,"0")).join("");
 }
-
-const saved=localStorage.getItem("userProfileDashboard");
-if(saved) showDashboard(JSON.parse(saved));
 
 async function login(){
 if(!username.value||!password.value) return;
@@ -177,11 +199,36 @@ function showDashboard(user){
 loginBox.classList.add("hide");
 dashboard.classList.remove("hide");
 title.innerText=user.role==="admin"?"Admin Dashboard":"User Dashboard";
-if(user.role==="admin") adminFilters.classList.remove("hide");
+if(user.role==="admin"){
+adminFilters.classList.remove("hide");
+}
 loadMembers(user);
+}
 
-filterCreatedBy?.addEventListener("input",()=>renderMembers(window.latestSnap));
-filterSearch?.addEventListener("input",()=>renderMembers(window.latestSnap));
+function toggleMenu(){
+profileMenu.style.display=
+profileMenu.style.display==="block"?"none":"block";
+}
+
+function openChangePassword(){
+Swal.fire({
+title:"Change Password",
+input:"password",
+inputPlaceholder:"Enter new password",
+showCancelButton:true
+}).then(async result=>{
+if(!result.value) return;
+const user=JSON.parse(localStorage.getItem("userProfileDashboard"));
+const h=await hashPassword(result.value);
+db.collection("users")
+.where("username","==",user.username)
+.get()
+.then(s=>{
+db.collection("users").doc(s.docs[0].id)
+.update({passwordHash:h})
+.then(()=>Swal.fire("Success","Password changed","success"));
+});
+});
 }
 
 function loadMembers(user){
@@ -189,13 +236,24 @@ db.collection("members").orderBy("createdAt","desc")
 .onSnapshot(snap=>{
 window.latestSnap=snap;
 renderMembers(snap);
+populateCreatedByDropdown(snap);
 });
 }
 
+function populateCreatedByDropdown(snap){
+const set=new Set();
+snap.forEach(d=>set.add(d.data().createdBy));
+filterCreatedBy.innerHTML='<option value="">All</option>';
+set.forEach(v=>{
+filterCreatedBy.innerHTML+=`<option value="${v}">${v}</option>`;
+});
+}
+
+filterCreatedBy?.addEventListener("change",()=>renderMembers(window.latestSnap));
+filterSearch?.addEventListener("input",()=>renderMembers(window.latestSnap));
+
 function renderMembers(snap){
 const user=JSON.parse(localStorage.getItem("userProfileDashboard"));
-if(!user) return;
-
 list.innerHTML="";
 
 snap.forEach(doc=>{
@@ -207,12 +265,11 @@ if(!m.active) return;
 }
 
 if(user.role==="admin"){
-if(filterCreatedBy.value && !m.createdBy.toLowerCase().includes(filterCreatedBy.value.toLowerCase())) return;
-
+if(filterCreatedBy.value && m.createdBy!==filterCreatedBy.value) return;
 if(filterSearch.value){
-const search=filterSearch.value.toLowerCase();
-if(!m.walletUserName.toLowerCase().includes(search) &&
-!m.walletUserId.toLowerCase().includes(search)) return;
+const s=filterSearch.value.toLowerCase();
+if(!m.walletUserName.toLowerCase().includes(s) &&
+!m.walletUserId.toLowerCase().includes(s)) return;
 }
 }
 
@@ -220,29 +277,7 @@ list.innerHTML+=`
 <div class="item">
 <b>${m.walletUserName}</b><br>
 ID: ${m.walletUserId}
-
-${m.balance!==undefined?`
-<div class="balance">
-<span>₹</span> ${m.balance}
-</div>`:""}
-
-<br>
-<small style="color:#94a3b8">
-Created by: <b style="color:#e5e7eb">${m.createdBy}</b>
-</small>
-
-<span class="badge ${m.active?'active':'inactive'}">
-${m.active?'ACTIVE':'INACTIVE'}
-</span>
-
-<div class="actions">
-<button onclick="toggle('${doc.id}',${m.active})">
-${m.active?'Deactivate':'Activate'}
-</button>
-<button onclick="del('${doc.id}','${m.walletUserName}')">
-Delete
-</button>
-</div>
+${m.balance!==undefined?`<div class="balance">₹ ${m.balance}</div>`:""}
 </div>
 `;
 });
@@ -265,41 +300,10 @@ walletUserId.value="";
 walletUserName.value="";
 }
 
-function toggle(id,a){
-db.collection("members").doc(id).update({active:!a});
-}
-
-function del(id,n){
-if(confirm("Delete "+n+" ?")){
-db.collection("members").doc(id).delete();
-}
-}
-
-async function changePassword(){
-const user=JSON.parse(localStorage.getItem("userProfileDashboard"));
-if(!newPassword.value) return;
-
-const h=await hashPassword(newPassword.value);
-
-db.collection("users")
-.where("username","==",user.username)
-.get()
-.then(s=>{
-if(s.empty) return;
-db.collection("users").doc(s.docs[0].id)
-.update({passwordHash:h})
-.then(()=>{
-Swal.fire("Success","Password changed","success");
-newPassword.value="";
-});
-});
-}
-
 function logout(){
 localStorage.clear();
 location.reload();
 }
-
 </script>
 
 </body>
